# e2openplugin-EnhancedMovieCenter

./: .gitattributes  .gitignore  CutListSupport.py  CutlistDownloader.py  DelayedFunction.py  DirectoryStack.py  E2Bookmarks.py  EMBookmarks.py  EMCBookmarks.py  EMCCoverSearch.py  EMCMediaCenter.py  EMCTasker.py  EitSupport.py  EnhancedMovieCenter.py  InfoBarSupport.py  IsoFileSupport.py  Makefile.am  MetaSupport.py  MovieCenter.py  MovieRetitle.py  MovieSelection.py  MovieSelectionMenu.py  PermanentSort.py  README.md  RecordingsControl.py  RogueFileCheck.py  Rules-po.mak  ServiceSupport.py  VlcPluginInterface.py  __init__.py  configure.ac  e2bookmarks.py  enigma2-plugin-extensions-enhancedmoviecenter.bb  imdb.py  imdb_meine_aktuelle_22.01-15.17.py  keymap.xml  plugin.py  xml2po.py
CONTROL/: conffiles  control  postinst  postrm
CONTROL_OE2/: control
Components/: Makefile.am
Converter/: EMCClockToText.py  EMCEventName.py  EMCMovieInfo.py  EMCRecordPosition.py  EMCServicePosition.py  EMCServiceTime.py
CoolSkin/: EMCMediaCenter_1024.xml  EMCMediaCenter_1280.xml  EMCMediaCenter_720.xml  EMCSelection_1024.xml  EMCSelection_1280.xml  EMCSelection_720.xml  EMC_CoverSearch_screen_Only_for_info.txt  EMC_Setup_and_CoverSearch_screens_Only_for_info.txt  EMC_Setup_screen_Only_for_info.txt
IPKG-Build/: ipkg_EMC.sh
Sources/: EMCCurrentService.py
cfgfiles/: emc-hide.cfg  emc-noscan.cfg  emc-permsort.cfg  emc-topdir.cfg  readme.txt
etc/: Makefile.am  emc-hide.cfg
po/: EMC.pot  EnhancedMovieCenter.mo  EnhancedMovieCenter.pot  Makefile.am  ar.po  cs.po  da.po  de.mo  (+18 more)
(+154 files in other folders)
