AC_INIT([e2openplugin-EnhancedMovieCenter],[20170408],[https://github.com/betonme/e2openplugin-EnhancedMovieCenter/issues])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
src/Makefile
src/script/Makefile
src/img/Makefile
src/img_fhd/Makefile
src/CoolSkin/Makefile
Components/Makefile
Components/Converter/Makefile
Components/Renderer/Makefile
Components/Sources/Makefile
po/Makefile
etc/Makefile
])
AC_OUTPUT